--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.5.*",
         "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0",
+        "spatie/laravel-activitylog": "^2.3",
         "spatie/laravel-permission": "^2.5",
         "tymon/jwt-auth": "dev-develop"
     },
